objects/OverrideSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting that breaks down override permissions by profile</description>
    <fields>
        <fullName>Allowable_Grades__c</fullName>
        <description>these are the letters that can be used as override grades for sections</description>
        <inlineHelpText>these can be used as override grades for sections, separated by commas</inlineHelpText>
        <label>Allowable Grades</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this profile has the permissions to override a section grade</description>
        <inlineHelpText>does this profile/user have permissions to override a section grade with one of the allowable grades?</inlineHelpText>
        <label>Grade Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withdraw_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this profile can override a section grade with &quot;W&quot;</description>
        <inlineHelpText>does this profile/user have permissions to override a section grade with &quot;W&quot;?</inlineHelpText>
        <label>Withdraw Override</label>
        <type>Checkbox</type>
    </fields>
    <label>Grade Overrides</label>
</CustomObject>